Chapter05/kubia-po-multi-ports.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-multi-ports
  labels:
    app: kubia-multi-ports
spec:
  containers:
  - name: broker
    image: nginx
    ports:
    - containerPort: 80
  - name: webapp
    image: luksa/kubia
    ports:
    - containerPort: 8080
