Chapter05/kubia-po-named.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-named
  labels:
    app: kubia-named
spec:
  containers:
  - name: broker
    image: nginx
    ports:
    - name: http
      containerPort: 80
  - name: webapp
    image: luksa/kubia
    ports:
    - name: https
      containerPort: 8080
