Chapter05/kubia-svc-multi-ports-named.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-multi-ports-named
spec:
  ports:
  - name: http
    port: 81
    targetPort: http
  - name: https
    port: 82
    targetPort: https
  selector:
    app: kubia-multi-ports-named
