Chapter05/kubia-svc-multi-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-multi-ports
spec:
  ports:
  - name: http
    port: 81
    targetPort: 80
  - name: https
    port: 82
    targetPort: 8080
  selector:
    app: kubia-multi-ports
