Chapter05/kubia-svc-named-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-named
spec:
  ports:
  - name: http
    port: 81
    targetPort: htp
  - name: https
    port: 82
    targetPort: https
  selector:
    app: kubia-named
