Chapter05/kubia-svc-publish-not-ready.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-all
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
  publishNotReadyAddresses: true
