Chapter05/kubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-tls
spec:
  tls:
  - hosts: 
    - kubia.suhyuk.me
    secretName: tls-secret
  rules:
  - host: kubia.suhyuk.me
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
